fixed spacing issues

--- a/docs/output.css
+++ b/docs/output.css
@@ -594,6 +594,14 @@ video {
   margin-bottom: auto;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .block {
   display: block;
 }
